tried to fix the gap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,7 +112,7 @@ nav ul li a:hover {
 .about-page .mosaic {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.25rem;
+  gap: 1.5rem;
   max-width: 100%;
   margin-left: 60px;
   padding-top: 9.375rem;
